# media-manager

./: .gitignore  Cargo.toml
libmm/: Cargo.toml
libmm/src/: api.rs  db.rs  error.rs  lib.rs  media.rs
libmm/src/api/: tmdb.rs  tvmaze.rs
libmm/src/api/tmdb/: endpoint.rs  response.rs
libmm/src/api/tvmaze/: endpoint.rs  response.rs
libmm/src/db/: entity.rs  movie.rs  tvshow.rs
libmm/src/media/: metadata.rs  name_parser.rs
media-manager/: Cargo.toml
media-manager/src/: args.rs  command.rs  config.rs  error.rs  input.rs  main.rs  paths.rs
media-manager/src/command/: add_movie.rs  list_movies.rs  parser.rs
