[package]
name = "libmm"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.28.0", features = ["bundled"] }
matroska = "0.18.0"
ureq = { version = "2.5.0", features = ["json"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }